<resources>
    <string name="app_name">"Campus Recruitment "</string>
    <string name="loginAs">Login As</string>
    <string name="admin">Admin</string>
    <string name="student">Student</string>
    <string name="company">Company</string>
    <string name="enter_email">Enter Your Email</string>
    <string name="enter_pass">Password</string>
    <string name="login">Log In</string>
    <string name="text_dont_have_account">Don\'t have Account?</string>
    <string name="button_create_account">Sign Up</string>
    <string name="enter_name">Enter Your Name</string>
    <string name="signup">Sign Up</string>
    <string name="enter_comp_name">Enter Your Company Name</string>
    <string name="progress_dialog_loading">Loading...</string>
    <string name="progress_dialog_creating_user_with_firebase">Authenticating with firebase..</string>
    <string name="error_invalid_email_not_valid">%s is not a valid email</string>
    <string name="error_cannot_be_empty">Can not be empty</string>
    <string name="error_invalid_password_not_valid">Please enter a password that is at least 6 characters long.</string>
    <string name="profile">Profile</string>
    <string name="your_email">Your Email</string>
    <string name="your_name">Name</string>
    <string name="create_vecancy">Create Vecancy</string>
    <string name="vec_title">Title</string>
    <string name="vec_salary">Salary</string>
    <string name="vec_age_req">Age Requirement</string>
    <string name="vec_qulif">Qulification</string>
    <string name="vec_comp_name">Your Company Name</string>
    <string name="create">Create</string>
    <string name="fra_create_vec">Create Vecancy</string>
    <string name="your_profile">Your Profile</string>
    <string name="std_pro_experties">Your Experties</string>
    <string name="std_pro_age">Age</string>
    <string name="std_edit_dept">Departement</string>
    <string name="update">Update</string>
    <string name="frg_std_profil">Update Profile</string>
    <string name="comp_list_title">Title</string>
    <string name="comp_list_name">Company Name</string>
    <string name="comp_list_qulification">Qulification</string>
    <string name="comp_list_age">Age</string>
    <string name="std_list_name">Name</string>
    <string name="comp_list_experties">Experties</string>
    <string name="comp_list_dept">Departemetn</string>
</resources>
