<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_admin_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context="com.example.zar.campusrecruitment.ui.AdminLoginActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/admin_text_login"
        android:text="@string/company"
        android:textSize="@dimen/title_size"
        android:paddingBottom="@dimen/activity_horizontal_margin"/>


    <EditText
        android:id="@+id/comp_edit_email"
        android:layout_width="@dimen/edit_w"
        android:layout_height="wrap_content"
        android:hint="@string/enter_email"
        android:inputType="textEmailAddress"/>
    <EditText
        android:id="@+id/comp_edit_pass"
        android:layout_width="@dimen/edit_w"
        android:layout_height="wrap_content"
        android:hint="@string/enter_pass"
        />
    <Button
        android:id="@+id/comp_btn_login"
        android:onClick="login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:layout_marginTop="35dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_dont_have_account"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_dont_have_account" />

        <TextView
            android:id="@+id/comp_txt_signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onSignUpPressed"
            android:text="@string/button_create_account"
            android:textStyle="bold"
            android:paddingLeft="@dimen/activity_horizontal_margin"/>
    </LinearLayout>
</LinearLayout>
