<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_student_sign_up"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:gravity="center"
    tools:context="com.example.zar.campusrecruitment.ui.StudentSignUpActivity">

    <EditText
        android:id="@+id/comp_signup_edit_name"
        android:layout_width="@dimen/edit_w"
        android:layout_height="wrap_content"
        android:hint="@string/enter_comp_name"
        android:inputType="textEmailAddress"/>
    <EditText
        android:id="@+id/comp_signup_edit_email"
        android:layout_width="@dimen/edit_w"
        android:layout_height="wrap_content"
        android:hint="@string/enter_email"
        android:inputType="textEmailAddress"/>
    <EditText
        android:id="@+id/comp_signup_edit_pass"
        android:layout_width="@dimen/edit_w"
        android:layout_height="wrap_content"
        android:hint="@string/enter_pass"
        />
    <Button
        android:id="@+id/comp_signup_btn_signup"
        android:onClick="createCompany"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signup"
        android:layout_marginTop="35dp"/>

</LinearLayout>
